Book summaryy update

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                 <div class="section-heading">
                     <h1>THAT WAS FATHER STU</h1>
-                    <h2>Read the book today!</h2>
+                    <h2>This inspiring, insightful, and often humorous look at the life of Father Stuart Long is told by his close friend Father Bart Tolleson. After their relationship began and almost ended with a practical joke, the two men were ordained together and forged a strong, lasting friendship. As the exuberant, edgy Father Stu confronted a rare degenerative disease, the former brawler and professional boxer used every ounce of his declining strength to fight the good fight for souls.</h2>
                 </div>
 
                 <!--Call to Action-->
