--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
                             <li>
                                 <a href="#testimonies">Testimonies</a>
                             </li>
-                            
+                            <li>
+                                <a href="https://beyond227.org">Beyond 227</a>
+                            </li>
                         </ul>
                     </nav>
                     <!--End of Main Navigation-->
