--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
 
                 <!--Call to Action-->
-                <a href="https://ignatius.com/that-was-father-stu-twsp/#:~:text=Product%20Overview,forged%20a%20strong%2C%20lasting%20friendship." class="button">Order Now</a>
+                <a href="https://beyond227.org/shop#!/That-Was-Father-Stu-Book/p/589788045/category=0" class="button">Order Now</a>
                 <!--End Call to Action-->
 
             </div>
@@ -138,7 +138,7 @@
                         <p class="section-subtitle">To send an email to Fr. Bart directly please use the link below.</p>
                     </div>
 
-	                <SCRIPT LANGUAGE="JavaScript">user = 'frbartbeyond227';site = 'gmail.com';document.write('<a href=\"mailto:' + user + '@' + site + '\" class=\"button\">');document.write('frbartbeyond227[at]gmail.com' + '</a>');</SCRIPT>
+	                <SCRIPT LANGUAGE="JavaScript">user = 'frbartbeyond227';site = 'gmail.com';document.write('<a href=\"mailto:' + user + '@' + site + '\" class=\"button\">');document.write('frbartbeyond227@gmail.com' + '</a>');</SCRIPT>
              	</div>
              	
              	<div class="col-2">
